manifests/komga/komga.yaml
apiVersion: v1
kind: Service
metadata:
  name: komga
  namespace: komga
  labels:
    app.kubernetes.io/instance: komga
    app.kubernetes.io/name: komga
    app.kubernetes.io/service: komga
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/component: komga
    app.kubernetes.io/instance: komga
    app.kubernetes.io/name: komga
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: komga
  namespace: komga
  labels:
    app.kubernetes.io/component: komga
    app.kubernetes.io/instance: komga
    app.kubernetes.io/name: komga
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: komga
      app.kubernetes.io/name: komga
      app.kubernetes.io/instance: komga
  template:
    metadata:
      labels:
        app.kubernetes.io/component: komga
        app.kubernetes.io/instance: komga
        app.kubernetes.io/name: komga
    spec:
      containers:
        - env:
            - name: TZ
              value: "Europe/Moscow"
            - name:  SERVER_PORT
              value: "8080"
            - name: KOMGA_CONFIGDIR
              value: /config
            - name: LOGGING_FILE_NAME
              value: /dev/stdout
          image: docker.io/gotson/komga:1.24.3
          name: app
          resources:
            limits:
              memory: 600Mi
            requests:
              cpu: 100m
              memory: 400Mi
          volumeMounts:
            - mountPath: /config
              name: data
              subPath: data
            - mountPath: /media
              name: media
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: komga-data
        - name: media
          nfs:
            server: "192.168.1.11"
            path: /var/nfs
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: komga-ingress
  namespace: komga
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: komga.malef.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: komga
                port:
                  number: 80
  tls:
    - hosts: 
      - komga.malef.lan
      secretName: komga-server-tls
